--- a/gamedata/config/misc/death_generic.ltx
+++ b/gamedata/config/misc/death_generic.ltx
@@ -127,6 +127,16 @@ box_amm_3=true
 box_amm_4=true
 af_kolya = true
 mil_transponder = true
+kulg_band_trader_car_key = true
+af_medusa_special = true
+kulgband_hutor_house_seif_key = true
+kulgband_bridge_scout_pda = true
+kulgband_informer_assist_pda = true
+ds_glavar_bag = true
+
+
+
+
 
 [death_gen_rare_items] ;Предметы, которые нельзя сильно портить при луте (уникальные стволы)
 wpn_vintorez_m1	= true
