--- a/gamedata/config/misc/quest_items.ltx
+++ b/gamedata/config/misc/quest_items.ltx
@@ -3057,3 +3057,238 @@ telepatic_immunity = 1.0
 chemical_burn_immunity = 1.0
 explosion_immunity = 1.0
 fire_wound_immunity  = 1.0
+
+
+
+
+[kulg_band_vater]:doc_unif
+$spawn 				= "devices\quest_items\lenin_book_1"
+visual				= physics\balon\kanistra.ogf
+description			= kulg_band_vater_desc
+inv_name			= kulg_band_vater_name
+inv_name_short		= kulg_band_vater_name
+inv_grid_width     = 2
+inv_grid_height    = 2
+inv_grid_x         = 39
+inv_grid_y         = 36
+cost				= 100
+inv_weight			= 3
+quest_item			= true
+
+
+[zona_bro2_pda]:antir_f
+GroupControlSection		= spawn_group
+discovery_dependency		=
+$spawn				= "devices\mobile_changer"
+visual				= equipments\item_pda.ogf
+$prefetch			= 32
+cform				= skeleton
+radius				= 1
+description			= zona_bro2_pda_desc
+inv_name			= zona_bro2_pda_name
+inv_name_short			= zona_bro2_pda_name
+inv_weight			= 0
+inv_grid_width		= 2
+inv_grid_height		= 1
+inv_grid_x			= 6
+inv_grid_y			= 13
+cost				= 0
+
+
+[kulgband_cup]:doc_unif
+$spawn 				= "devices\quest_items\lenin_book_1"
+visual				= physics\decor\kitchen_krujka.ogf
+description			= kulgband_cup_desc
+inv_name			= kulgband_cup_name
+inv_name_short		= kulgband_cup_name
+inv_grid_width     = 1
+inv_grid_height    = 1
+inv_grid_x         = 58
+inv_grid_y         = 33
+cost				= 10
+inv_weight			= 0
+quest_item			= true
+
+
+[kulgband_cup_bad]:doc_unif
+$spawn 				= "devices\quest_items\lenin_book_1"
+visual				= physics\decor\kitchen_krujka.ogf
+description			= kulgband_cup_bad_desc
+inv_name			= kulgband_cup_bad_name
+inv_name_short		= kulgband_cup_bad_name
+inv_grid_width     = 1
+inv_grid_height    = 1
+inv_grid_x         = 59
+inv_grid_y         = 33
+cost				= 10
+inv_weight			= 0
+quest_item			= true
+
+
+[kulg_band_trader_car_key]:doc_unif
+$spawn 				= "devices\quest_items\lenin_book_1"
+visual				= physics\decor\kitchen_krujka.ogf
+description			= kulg_band_trader_car_key_desc
+inv_name			= kulg_band_trader_car_key_name
+inv_name_short		= kulg_band_trader_car_key_name
+inv_grid_width     = 1
+inv_grid_height    = 1
+inv_grid_x         = 15
+inv_grid_y         = 28
+cost				= 10
+inv_weight			= 0
+can_trade			= false
+quest_item			= true
+
+
+[val_filin_diary]:doc_unif
+$spawn 				= "devices\quest_items\lenin_book_1"
+visual				= equipments\item_zapiska.ogf
+description			= val_filin_diary_desc
+inv_name			= val_filin_diary_name
+inv_name_short		= val_filin_diary_name
+inv_grid_width     = 1
+inv_grid_height    = 1
+inv_grid_x         = 42
+inv_grid_y         = 36
+cost				= 0
+inv_weight			= 0
+can_trade			= false
+quest_item			= true
+
+
+[rad_kulgband_zapis]:doc_unif
+$spawn 				= "devices\quest_items\lenin_book_1"
+visual				= equipments\item_zapiska.ogf
+description			= rad_kulgband_zapis_desc
+inv_name			= rad_kulgband_zapis_name
+inv_name_short		= rad_kulgband_zapis_name
+inv_grid_width     = 1
+inv_grid_height    = 1
+inv_grid_x         = 42
+inv_grid_y         = 36
+cost				= 0
+inv_weight			= 0
+can_trade			= false
+quest_item			= true
+
+
+[kulgband_hutor_house_seif_key]:doc_unif
+$spawn 				= "devices\quest_items\lenin_book_1"
+visual				= physics\decor\kitchen_krujka.ogf
+description			= kulgband_hutor_house_seif_key_desc
+inv_name			= kulgband_hutor_house_seif_key_name
+inv_name_short		= kulgband_hutor_house_seif_key_name
+inv_grid_width     = 1
+inv_grid_height    = 1
+inv_grid_x         = 51
+inv_grid_y         = 37
+cost				= 10
+inv_weight			= 0
+can_trade			= false
+quest_item			= true
+
+
+[kulgband_bridge_scout_pda]:doc_unif
+GroupControlSection		= spawn_group
+discovery_dependency		=
+$spawn				= "devices\mobile_changer"
+visual				= equipments\item_pda.ogf
+$prefetch			= 32
+cform				= skeleton
+radius				= 1
+description			= kulgband_bridge_scout_pda_desc
+inv_name			= kulgband_bridge_scout_pda_name
+inv_name_short			= kulgband_bridge_scout_pda_name
+inv_weight			= 0
+inv_grid_width		= 2
+inv_grid_height		= 1
+inv_grid_x			= 6
+inv_grid_y			= 13
+cost				= 0
+
+
+[kulgband_informer_assist_pda]:doc_unif
+GroupControlSection		= spawn_group
+discovery_dependency		=
+$spawn				= "devices\mobile_changer"
+visual				= equipments\item_pda.ogf
+$prefetch			= 32
+cform				= skeleton
+radius				= 1
+description			= kulgband_informer_assist_pda_desc
+inv_name			= kulgband_informer_assist_pda_name
+inv_name_short			= kulgband_informer_assist_pda_name
+inv_weight			= 0
+inv_grid_width		= 2
+inv_grid_height		= 1
+inv_grid_x			= 6
+inv_grid_y			= 13
+cost				= 0
+
+
+[kulgband_informer_map]:doc_unif
+GroupControlSection		= spawn_group
+discovery_dependency		=
+$spawn				= "devices\mobile_changer"
+visual				= equipments\item_pda.ogf
+$prefetch			= 32
+cform				= skeleton
+radius				= 1
+description			= kulgband_informer_map_desc
+inv_name			= kulgband_informer_map_name
+inv_name_short			= kulgband_informer_map_name
+inv_weight			= 0
+inv_grid_width		= 2
+inv_grid_height		= 1
+inv_grid_x			= 62
+inv_grid_y			= 33
+cost				= 0
+
+
+[kulgband_informer_bag]:doc_unif
+GroupControlSection		= spawn_group
+discovery_dependency		=
+$spawn				= "devices\mobile_changer"
+visual				= equipments\item_pda.ogf
+$prefetch			= 32
+cform				= skeleton
+radius				= 1
+description			= kulgband_informer_bag_desc
+inv_name			= kulgband_informer_bag_name
+inv_name_short			= kulgband_informer_bag_name
+inv_weight			= 10
+inv_grid_width		= 2
+inv_grid_height		= 2
+inv_grid_x			= 58
+inv_grid_y			= 31
+cost				= 1000
+
+[ds_glavar_bag]:doc_unif
+GroupControlSection		= spawn_group
+discovery_dependency		=
+$spawn				= "devices\mobile_changer"
+visual				= equipments\item_pda.ogf
+$prefetch			= 32
+cform				= skeleton
+radius				= 1
+description			= ds_glavar_bag_desc
+inv_name			= ds_glavar_bag_name
+inv_name_short			= ds_glavar_bag_name
+inv_weight			= 10
+inv_grid_width		= 2
+inv_grid_height		= 2
+inv_grid_x			= 58
+inv_grid_y			= 31
+cost				= 1000
+
+
+
+
+
+
+
+
+
+
+
