--- a/gamedata/config/misc/trade_weapons.ltx
+++ b/gamedata/config/misc/trade_weapons.ltx
@@ -1,6 +1,74 @@
 ;-------- Ó·˘ËÈ Ù‡ÈÎ ÚÓ„Ó‚ÎË ‰Îˇ ‚ÒÂı ÚÓ„Ó‚ˆÂ‚ ---------
 ;------------------------- œŒ ”œ ¿ -----------------------
+[old_weapons_buy_notrade]
+wpn_mp5												;NO TRADE
+wpn_fn2000											;NO TRADE
+wpn_sig550											;NO TRADE
+wpn_sg550sr_sk1         							;NO TRADE
+wpn_m16a1_sk1										;NO TRADE
+wpn_pkm				    							;NO TRADE
+wpn_gravigun										;NO TRADE
+wpn_groza ;NO TRADE
+wpn_val ;NO TRADE
+
+[unic_weapons_buy_notrade]
+wpn_fort_m1				;NO TRADE
+wpn_eagle_m1			;NO TRADE
+wpn_colt_m1				;NO TRADE
+wpn_mp5_m1				;NO TRADE
+wpn_mp5_m2				;NO TRADE
+wpn_winchester_m1		;NO TRADE
+wpn_spas12_m1 ;NO TRADE
+wpn_groza_m1			;NO TRADE
+wpn_vintorez_m1 ;NO TRADE
+wpn_sig_m1				;NO TRADE
+wpn_sig_m2				;NO TRADE
+wpn_svu_m1				;NO TRADE
+wpn_m_134				;NO TRADE
+
+[arena_weapons_buy_notrade]
+wpn_pm_arena			;NO TRADE
+wpn_mp5_arena			;NO TRADE
+wpn_toz34_arena			;NO TRADE
+wpn_spas12_arena		;NO TRADE
+wpn_bm16_arena			;NO TRADE
+wpn_val_arena			;NO TRADE
+wpn_groza_arena			;NO TRADE
+wpn_fn2000_arena		;NO TRADE
+wpn_g36_arena			;NO TRADE
+
 [weapons_buy_notrade]
+wpn_pm					;NO TRADE
+wpn_pb				    ;NO TRADE
+wpn_tt					;NO TRADE
+wpn_hpsa				;NO TRADE
+wpn_fort				;NO TRADE
+wpn_beretta				;NO TRADE
+wpn_colt1911			;NO TRADE
+wpn_desert_eagle		;NO TRADE
+wpn_mac10				;NO TRADE
+wpn_mp40				;NO TRADE
+wpn_ppsh41				;NO TRADE
+wpn_gsh18				;NO TRADE
+wpn_luger				;NO TRADE
+wpn_oz33				;NO TRADE
+wpn_pp2000				;NO TRADE
+wpn_bm16				;NO TRADE
+wpn_bm16_full			;NO TRADE
+wpn_toz34_short			;NO TRADE
+wpn_toz34				;NO TRADE
+wpn_spas12				;NO TRADE
+wpn_mp153				;NO TRADE
+wpn_mosin_short			;NO TRADE
+wpn_mosin_normal		;NO TRADE
+wpn_mosin_sni			;NO TRADE
+wpn_sks					;NO TRADE
+wpn_awm					;NO TRADE
+wpn_crossbow			;NO TRADE
+wpn_flame			    ;NO TRADE
+wpn_rpg7				;NO TRADE
+wpn_gauss			    ;NO TRADE
+
 wpn_swd_nomag_pso1	;NO TRADE
 wpn_swd_nomag_grip_pso1	;NO TRADE
 wpn_swd_nomag_1pn51	;NO TRADE
@@ -84,7 +152,6 @@ wpn_akm_rpk75_mtk83_acog	;NO TRADE
 wpn_akm_rpk75_mtk83_eotech	;NO TRADE
 wpn_akm_nomag_mtk83_acog	;NO TRADE
 wpn_akm_nomag_mtk83_eotech	;NO TRADE
-wpn_eagle_m1	;NO TRADE
 	
 wpn_ak102_ak10230_stok_1p29	;NO TRADE
 wpn_ak102_ak10230_stok_kobra	;NO TRADE
@@ -158,6 +225,298 @@ wpn_ak74n_ak60_mtk83_eotech	;NO TRADE
 wpn_ak74n_nomag_mtk83_acog	;NO TRADE
 wpn_ak74n_nomag_mtk83_eotech	;NO TRADE
 
+wpn_usp_nomag	;NO TRADE
+wpn_usp	;NO TRADE
+wpn_usp9	;NO TRADE
+
+wpn_m712	;NO TRADE
+wpn_m712_buttstock	;NO TRADE
+
+wpn_apb	;NO TRADE
+wpn_apb_buttstock	;NO TRADE
+wpn_apb_silencer	;NO TRADE
+wpn_apb_silencer_buttstock	;NO TRADE
+wpn_apb_silencer_grip	;NO TRADE
+wpn_apb_silencer_grip_buttstock	;NO TRADE
+
+wpn_glock_nomag_ironsight	;NO TRADE
+wpn_glock	;NO TRADE
+wpn_glock_mag33_ironsight	;NO TRADE
+wpn_glock_nomag_prail	;NO TRADE
+wpn_glock_mag19_prail	;NO TRADE
+wpn_glock_mag33_prail	;NO TRADE
+wpn_glock_nomag_aimpoint	;NO TRADE
+wpn_glock_mag19_aimpoint	;NO TRADE
+wpn_glock_mag33_aimpoint	;NO TRADE
+
+wpn_masterkey	;NO TRADE
+wpn_masterkey_eotech	;NO TRADE
+wpn_masterkey_eotech_magnifier	;NO TRADE
+wpn_masterkey_eotech_nightvision	;NO TRADE
+wpn_masterkey_acog	;NO TRADE
+wpn_masterkey_acog_nightvision	;NO TRADE
+wpn_wincheaster1300	;NO TRADE
+wpn_wincheaster1300_eotech	;NO TRADE
+wpn_wincheaster1300_eotech_magnifier	;NO TRADE
+wpn_wincheaster1300_eotech_nightvision	;NO TRADE
+wpn_wincheaster1300_acog	;NO TRADE
+wpn_wincheaster1300_acog_nightvision	;NO TRADE
+
+wpn_vepr12stok_nomag_ironsight	;NO TRADE
+wpn_vepr12stok_vepr4_ironsight	;NO TRADE
+wpn_vepr12stok_vepr8_ironsight	;NO TRADE
+wpn_vepr12custom_nomag_ironsight	;NO TRADE
+wpn_vepr12custom_vepr4_ironsight	;NO TRADE
+wpn_vepr12custom_vepr8_ironsight	;NO TRADE
+wpn_vepr12custom_nomag_grip_ironsight	;NO TRADE
+wpn_vepr12custom_vepr4_grip_ironsight	;NO TRADE
+wpn_vepr12custom_vepr8_grip_ironsight	;NO TRADE
+
+wpn_aek_akm30_1p29	;NO TRADE
+wpn_aek_akm30_kobra	;NO TRADE
+wpn_aek_akm30_1pn51	;NO TRADE
+wpn_aek_rpk40_1p29	;NO TRADE
+wpn_aek_rpk40_kobra	;NO TRADE
+wpn_aek_rpk40_1pn51	;NO TRADE
+wpn_aek_rpk75_1p29	;NO TRADE
+wpn_aek_rpk75_kobra	;NO TRADE
+wpn_aek_rpk75_1pn51	;NO TRADE
+wpn_aek_nomag_1p29	;NO TRADE
+wpn_aek_nomag_kobra	;NO TRADE
+wpn_aek_nomag_1pn51	;NO TRADE
+wpn_aek_akm30_mtk83_acog	;NO TRADE
+wpn_aek_akm30_mtk83_eotech	;NO TRADE
+wpn_aek_rpk40_mtk83_acog	;NO TRADE
+wpn_aek_rpk40_mtk83_eotech	;NO TRADE
+wpn_aek_rpk75_mtk83_acog	;NO TRADE
+wpn_aek_rpk75_mtk83_eotech	;NO TRADE
+wpn_aek_nomag_mtk83_acog	;NO TRADE
+wpn_aek_nomag_mtk83_eotech	;NO TRADE
+
+wpn_svu_nomag_pso1	;NO TRADE
+wpn_svu_nomag_1pn51	;NO TRADE
+wpn_svu_nomag_1p59	;NO TRADE
+wpn_svu_nomag_1p29	;NO TRADE
+wpn_svu_nomag_kobra	;NO TRADE
+wpn_svu				    ;NO TRADE
+wpn_svu_svd10_1pn51	;NO TRADE
+wpn_svu_svd10_1p59	;NO TRADE
+wpn_svu_svd10_1p29	;NO TRADE
+wpn_svu_svd10_kobra	;NO TRADE
+wpn_svu_svd20_pso1	;NO TRADE
+wpn_svu_svd20_1pn51	;NO TRADE
+wpn_svu_svd20_1p59	;NO TRADE
+wpn_svu_svd20_1p29	;NO TRADE
+wpn_svu_svd20_kobra	;NO TRADE
+
+wpn_rpk74p_rpk74p30_side_rail_1p29	;NO TRADE
+wpn_rpk74p_rpk74p30_side_rail_kobra	;NO TRADE
+wpn_rpk74p_rpk74p30_side_rail_1pn51	;NO TRADE
+wpn_rpk74p_rpk45_side_rail_1p29	;NO TRADE
+wpn_rpk74p_rpk45_side_rail_kobra	;NO TRADE
+wpn_rpk74p_rpk45_side_rail_1pn51	;NO TRADE
+wpn_rpk74p_ak60_side_rail_1p29	;NO TRADE
+wpn_rpk74p_ak60_side_rail_kobra	;NO TRADE
+wpn_rpk74p_ak60_side_rail_1pn51	;NO TRADE
+wpn_rpk74p_nomag_side_rail_1p29	;NO TRADE
+wpn_rpk74p_nomag_side_rail_kobra	;NO TRADE
+wpn_rpk74p_nomag_side_rail_1pn51	;NO TRADE
+wpn_rpk74p_rpk74p30_mtk83_acog	;NO TRADE
+wpn_rpk74p_rpk74p30_mtk83_eotech	;NO TRADE
+wpn_rpk74p_rpk45_mtk83_acog	;NO TRADE
+wpn_rpk74p_rpk45_mtk83_eotech	;NO TRADE
+wpn_rpk74p_ak60_mtk83_acog	;NO TRADE
+wpn_rpk74p_ak60_mtk83_eotech	;NO TRADE
+wpn_rpk74p_nomag_mtk83_acog	;NO TRADE
+wpn_rpk74p_nomag_mtk83_eotech	;NO TRADE
+
+wpn_vintorez							;NO TRADE
+wpn_vss_m10_side_rail_pso		;NO TRADE
+wpn_vss_m10_side_rail_kobra		;NO TRADE
+wpn_vss_m10_side_rail_1pn51		;NO TRADE
+wpn_vss_m10_mtk83_acog			;NO TRADE
+wpn_vss_m20_side_rail_pso		;NO TRADE
+wpn_vss_nomag_side_rail_pso		;NO TRADE
+wpn_vss_m20_side_rail_kobra		;NO TRADE
+wpn_vss_nomag_side_rail_kobra	;NO TRADE
+wpn_vss_m20_side_rail_1pn51		;NO TRADE
+wpn_vss_nomag_side_rail_1pn51	;NO TRADE
+wpn_vss_m20_mtk83_acog			;NO TRADE
+wpn_vss_nomag_mtk83_acog		;NO TRADE
+wpn_vss_m10_mtk83_eotech		;NO TRADE
+wpn_vss_m20_mtk83_eotech		;NO TRADE
+wpn_vss_nomag_mtk83_eotech		;NO TRADE
+
+wpn_a91_m20_side_rail_pso		;NO TRADE
+wpn_a91_m20_side_rail_kobra		;NO TRADE
+wpn_a91_m20_side_rail_1pn51		;NO TRADE
+wpn_a91_m20_mtk83_acog			;NO TRADE
+wpn_a91_nomag_side_rail_pso		;NO TRADE
+wpn_a91_nomag_side_rail_kobra	;NO TRADE
+wpn_a91_nomag_side_rail_1pn51	;NO TRADE
+wpn_a91_nomag_mtk83_acog		;NO TRADE
+wpn_a91_m20_side_rail_1pn51		;NO TRADE
+wpn_a91_m20_mtk83_eotech		;NO TRADE
+wpn_a91_nomag_mtk83_eotech		;NO TRADE
+
+wpn_vsk94_m20_side_rail_pso		;NO TRADE
+wpn_vsk94_m20_side_rail_kobra	;NO TRADE
+wpn_vsk94_m20_side_rail_1pn51	;NO TRADE
+wpn_vsk94_m20_mtk83_acog		;NO TRADE
+wpn_vsk94_nomag_side_rail_pso	;NO TRADE
+wpn_vsk94_nomag_side_rail_kobra	;NO TRADE
+wpn_vsk94_nomag_side_rail_1pn51	;NO TRADE
+wpn_vsk94_nomag_mtk83_acog		;NO TRADE
+wpn_vsk94_m20_mtk83_eotech		;NO TRADE
+wpn_vsk94_nomag_mtk83_eotech	;NO TRADE
+
+wpn_sr3m_m30_side_rail_pso		;NO TRADE
+wpn_sr3m_m30_side_rail_kobra	;NO TRADE
+wpn_sr3m_m30_side_rail_1pn51	;NO TRADE
+wpn_sr3m_nomag_side_rail_pso	;NO TRADE
+wpn_sr3m_nomag_side_rail_kobra	;NO TRADE
+wpn_sr3m_nomag_side_rail_1pn51	;NO TRADE
+wpn_sr3m_m30_mtk83_acog			;NO TRADE
+wpn_sr3m_m30_mtk83_eotech		;NO TRADE
+wpn_sr3m_nomag_mtk83_acog		;NO TRADE
+wpn_sr3m_nomag_mtk83_eotech		;NO TRADE
+
+wpn_l85_carryhandle				;NO TRADE
+wpn_l85_susat					;NO TRADE
+
+wpn_g36					;NO TRADE
+
+
+[all_weapons_buy_notrade]:weapons_buy_notrade, old_weapons_buy_notrade, unic_weapons_buy_notrade, arena_weapons_buy_notrade
+
+
+[ammo_buy_notrade]
+ammo_7.62x25_p			;NO TRADE
+ammo_7.62x25_ps			;NO TRADE
+ammo_7.62x39_fmj		;NO TRADE
+ammo_7.62x39_ap			;NO TRADE
+ammo_9x18_fmj			;NO TRADE
+ammo_9x18_pmm			;NO TRADE
+ammo_9x19_pbp			;NO TRADE
+ammo_9x19_fmj			;NO TRADE
+ammo_5.45x39_fmj		;NO TRADE
+ammo_5.45x39_ap			;NO TRADE
+ammo_5.56x45_ss190		;NO TRADE
+ammo_5.56x45_ap			;NO TRADE
+ammo_7.62x54_7h1		;NO TRADE
+ammo_7.62x54_ap			;NO TRADE
+ammo_7.62x54_7h14		;NO TRADE
+ammo_gauss				;NO TRADE
+ammo_9x39_pab9			;NO TRADE
+ammo_9x39_ap			;NO TRADE
+ammo_11.43x23_fmj		;NO TRADE
+ammo_11.43x23_hydro		;NO TRADE
+ammo_12x76_zhekan		;NO TRADE
+ammo_12x70_kart			;NO TRADE
+ammo_og-7b				;NO TRADE
+ammo_vog-25p			;NO TRADE
+ammo_vog-25				;NO TRADE
+ammo_m209				;NO TRADE
+ammo_flame				;NO TRADE
+ammo_arbolt				;NO TRADE
+ammo_m208a				;NO TRADE
+ammo_8.6x70_lm			;NO TRADE
+grenade_f1			;NO TRADE
+grenade_rgd5		;NO TRADE
+grenade_light		;NO TRADE
+grenade_gd-05		;NO TRADE
+grenade_gas			;NO TRADE
+
+
+;-------- ADDONS -------- 
+[scope_buy_notrade]
+wpn_addon_scope				;NO TRADE
+wpn_addon_scope_pso1m21		;NO TRADE
+wpn_addon_scope_kobra		;NO TRADE
+wpn_addon_scope_1p29		;NO TRADE
+wpn_addon_scope_1pn51		;NO TRADE
+wpn_addon_scope_1p59		;NO TRADE
+wpn_addon_scope_eotech		;NO TRADE
+wpn_addon_scope_susat		;NO TRADE
+wpn_addon_acog				;NO TRADE
+wpn_zf4             		;NO TRADE
+wpn_addon_scope_long	    ;NO TRADE
+wpn_addon_scope_pu		    ;NO TRADE
+wpn_addon_scope_pgo7	    ;NO TRADE
+wpn_addon_zenitka			;NO TRADE
+wpn_addon_scope_irnv	    ;NO TRADE
+wpn_addon_scope_aimpoint	;NO TRADE
+wpn_addon_magnifier	    	;NO TRADE
+wpn_addon_nightvision	    ;NO TRADE
+wpn_addon_irnv	    		;NO TRADE
+
+[silencer_buy_notrade]
+wpn_addon_silencer		;NO TRADE
+wpn_9mm_nato_silencer	;NO TRADE
+wpn_addon_sil_1143_p	;NO TRADE
+wpn_addon_sil_556_ar	;NO TRADE
+wpn_addon_sil_762_pbs1	;NO TRADE
+wpn_addon_sil_762_tgp-v	;NO TRADE
+wpn_addon_sil_545_pbs4	;NO TRADE
+wpn_addon_sil_545_tgp-a	;NO TRADE
+wpn_addon_sil_545_atg	;NO TRADE
+wpn_addon_apb_silencer	;NO TRADE
+wpn_addon_sil_m1895		;NO TRADE
+wpn_addon_sil_pb		;NO TRADE
+wpn_addon_sil_762_svu	;NO TRADE
+wpn_addon_sil_939		;NO TRADE
+	
+[mag_buy_notrade]
+wpn_addon_mag_akm30     	;NO TRADE
+wpn_addon_mag_rpk40         ;NO TRADE
+wpn_addon_mag_rpk75         ;NO TRADE
+wpn_addon_mag_ak7430        ;NO TRADE
+wpn_addon_mag_rpk7445       ;NO TRADE
+wpn_addon_mag_ak10560       ;NO TRADE
+wpn_addon_mag_svd10         ;NO TRADE
+wpn_addon_mag_svd20         ;NO TRADE
+wpn_addon_mag_vss10         ;NO TRADE
+wpn_addon_mag_as20          ;NO TRADE
+wpn_addon_mag_vsk20         ;NO TRADE
+wpn_addon_mag_ak10230       ;NO TRADE
+wpn_addon_mag_cmag100       ;NO TRADE
+wpn_addon_mag_mk6       	;NO TRADE
+wpn_addon_mag_usp8      	;NO TRADE
+wpn_addon_mag_usp15     	;NO TRADE
+wpn_addon_mag_vepr4     	;NO TRADE
+wpn_addon_mag_vepr8     	;NO TRADE
+wpn_addon_mag_glock19   	;NO TRADE
+wpn_addon_mag_glock33   	;NO TRADE
+wpn_addon_mag_sr30   		;NO TRADE
+wpn_addon_mag_murka   		;NO TRADE
+
+[grip_buy_notrade]
+wpn_addon_grip			;NO TRADE
+wpn_addon_afg			;NO TRADE
+
+[rail_buy_notrade]
+wpn_addon_side_rail	;NO TRADE
+wpn_addon_l85carryhandle ;NO TRADE
+wpn_addon_mtk83			;NO TRADE
+wpn_addon_prail			;NO TRADE
+wpn_addon_g36rail		;NO TRADE
+
+[buttstock_buy_notrade]
+wpn_addon_apb_buttstock		;NO TRADE
+wpn_addon_mauser_buttstock	;NO TRADE
+wpn_addon_svd_scheek		;NO TRADE
+wpn_addon_gp_galoscha		;NO TRADE
+
+[grenade_launcher_buy_notrade]
+wpn_addon_grenade_launcher		;NO TRADE
+wpn_addon_grenade_launcher_m203	;NO TRADE
+wpn_addon_grenade_launcher_ag36	;NO TRADE
+
+[all_addons_buy_notrade]:scope_buy_notrade, silencer_buy_notrade, mag_buy_notrade, grip_buy_notrade, rail_buy_notrade, buttstock_buy_notrade, grenade_launcher_buy_notrade
+
+
+
+;-------- ;-------- ;-------- ;-------- ;-------- ;-------- –¿«ƒ¿“‹ ÕŒ¬Œ≈
 [weapons_buy_cheap]
 wpn_swd_nomag_pso1	= 0.3, 0.1
 wpn_swd_nomag_grip_pso1	= 0.3, 0.1
@@ -316,6 +675,55 @@ wpn_ak74n_ak60_mtk83_eotech	= 0.3, 0.1
 wpn_ak74n_nomag_mtk83_acog	= 0.3, 0.1
 wpn_ak74n_nomag_mtk83_eotech	= 0.3, 0.1
 
+wpn_usp_nomag	= 0.3, 0.1
+wpn_usp	= 0.3, 0.1
+wpn_usp9	= 0.3, 0.1
+
+wpn_m712	= 0.3, 0.1
+wpn_m712_buttstock	= 0.3, 0.1
+
+wpn_apb	= 0.3, 0.1
+wpn_apb_buttstock	= 0.3, 0.1
+wpn_apb_silencer	= 0.3, 0.1
+wpn_apb_silencer_buttstock	= 0.3, 0.1
+wpn_apb_silencer_grip	= 0.3, 0.1
+wpn_apb_silencer_grip_buttstock	= 0.3, 0.1
+
+wpn_glock_nomag_ironsight	= 0.3, 0.1
+wpn_glock	= 0.3, 0.1
+wpn_glock_mag33_ironsight	= 0.3, 0.1
+wpn_glock_nomag_prail	= 0.3, 0.1
+wpn_glock_mag19_prail	= 0.3, 0.1
+wpn_glock_mag33_prail	= 0.3, 0.1
+wpn_glock_nomag_aimpoint	= 0.3, 0.1
+wpn_glock_mag19_aimpoint	= 0.3, 0.1
+wpn_glock_mag33_aimpoint	= 0.3, 0.1
+
+wpn_masterkey	= 0.3, 0.1
+wpn_masterkey_eotech	= 0.3, 0.1
+wpn_masterkey_eotech_magnifier	= 0.3, 0.1
+wpn_masterkey_eotech_nightvision	= 0.3, 0.1
+wpn_masterkey_acog	= 0.3, 0.1
+wpn_masterkey_acog_nightvision	= 0.3, 0.1
+wpn_wincheaster1300	= 0.3, 0.1
+wpn_wincheaster1300_eotech	= 0.3, 0.1
+wpn_wincheaster1300_eotech_magnifier	= 0.3, 0.1
+wpn_wincheaster1300_eotech_nightvision	= 0.3, 0.1
+wpn_wincheaster1300_acog	= 0.3, 0.1
+wpn_wincheaster1300_acog_nightvision	= 0.3, 0.1
+
+wpn_vepr12stok_nomag_ironsight	= 0.3, 0.1
+wpn_vepr12stok_vepr4_ironsight	= 0.3, 0.1
+wpn_vepr12stok_vepr8_ironsight	= 0.3, 0.1
+wpn_vepr12custom_nomag_ironsight	= 0.3, 0.1
+wpn_vepr12custom_vepr4_ironsight	= 0.3, 0.1
+wpn_vepr12custom_vepr8_ironsight	= 0.3, 0.1
+wpn_vepr12custom_nomag_grip_ironsight	= 0.3, 0.1
+wpn_vepr12custom_vepr4_grip_ironsight	= 0.3, 0.1
+wpn_vepr12custom_vepr8_grip_ironsight	= 0.3, 0.1
+
+
+;-------- 
 [weapons_buy_billy]
 wpn_swd_nomag_pso1	= 0.3, 0.7
 wpn_swd_nomag_grip_pso1	= 0.3, 0.7
@@ -474,6 +882,55 @@ wpn_ak74n_ak60_mtk83_eotech	= 0.3, 0.7
 wpn_ak74n_nomag_mtk83_acog	= 0.3, 0.7
 wpn_ak74n_nomag_mtk83_eotech	= 0.3, 0.7
 
+wpn_usp_nomag	= 0.3, 0.7
+wpn_usp	= 0.3, 0.7
+wpn_usp9	= 0.3, 0.7
+
+wpn_m712	= 0.3, 0.7
+wpn_m712_buttstock	= 0.3, 0.7
+
+wpn_apb	= 0.3, 0.7
+wpn_apb_buttstock	= 0.3, 0.7
+wpn_apb_silencer	= 0.3, 0.7
+wpn_apb_silencer_buttstock	= 0.3, 0.7
+wpn_apb_silencer_grip	= 0.3, 0.7
+wpn_apb_silencer_grip_buttstock	= 0.3, 0.7
+
+wpn_glock_nomag_ironsight	= 0.3, 0.7
+wpn_glock	= 0.3, 0.7
+wpn_glock_mag33_ironsight	= 0.3, 0.7
+wpn_glock_nomag_prail	= 0.3, 0.7
+wpn_glock_mag19_prail	= 0.3, 0.7
+wpn_glock_mag33_prail	= 0.3, 0.7
+wpn_glock_nomag_aimpoint	= 0.3, 0.7
+wpn_glock_mag19_aimpoint	= 0.3, 0.7
+wpn_glock_mag33_aimpoint	= 0.3, 0.7
+
+wpn_masterkey	= 0.3, 0.7
+wpn_masterkey_eotech	= 0.3, 0.7
+wpn_masterkey_eotech_magnifier	= 0.3, 0.7
+wpn_masterkey_eotech_nightvision	= 0.3, 0.7
+wpn_masterkey_acog	= 0.3, 0.7
+wpn_masterkey_acog_nightvision	= 0.3, 0.7
+wpn_wincheaster1300	= 0.3, 0.7
+wpn_wincheaster1300_eotech	= 0.3, 0.7
+wpn_wincheaster1300_eotech_magnifier	= 0.3, 0.7
+wpn_wincheaster1300_eotech_nightvision	= 0.3, 0.7
+wpn_wincheaster1300_acog	= 0.3, 0.7
+wpn_wincheaster1300_acog_nightvision	= 0.3, 0.7
+
+wpn_vepr12stok_nomag_ironsight	= 0.3, 0.7
+wpn_vepr12stok_vepr4_ironsight	= 0.3, 0.7
+wpn_vepr12stok_vepr8_ironsight	= 0.3, 0.7
+wpn_vepr12custom_nomag_ironsight	= 0.3, 0.7
+wpn_vepr12custom_vepr4_ironsight	= 0.3, 0.7
+wpn_vepr12custom_vepr8_ironsight	= 0.3, 0.7
+wpn_vepr12custom_nomag_grip_ironsight	= 0.3, 0.7
+wpn_vepr12custom_vepr4_grip_ironsight	= 0.3, 0.7
+wpn_vepr12custom_vepr8_grip_ironsight	= 0.3, 0.7
+
+
+;-------- 
 [weapons_buy_petrenko]
 wpn_swd_nomag_pso1	= 0.3, 0.2
 wpn_swd_nomag_grip_pso1	= 0.3, 0.2
@@ -632,6 +1089,55 @@ wpn_ak74n_ak60_mtk83_eotech	= 0.3, 0.2
 wpn_ak74n_nomag_mtk83_acog	= 0.3, 0.2
 wpn_ak74n_nomag_mtk83_eotech	= 0.3, 0.2
 
+wpn_usp_nomag	= 0.3, 0.2
+wpn_usp	= 0.3, 0.2
+wpn_usp9	= 0.3, 0.2
+
+wpn_m712	= 0.3, 0.2
+wpn_m712_buttstock	= 0.3, 0.2
+
+wpn_apb	= 0.3, 0.2
+wpn_apb_buttstock	= 0.3, 0.2
+wpn_apb_silencer	= 0.3, 0.2
+wpn_apb_silencer_buttstock	= 0.3, 0.2
+wpn_apb_silencer_grip	= 0.3, 0.2
+wpn_apb_silencer_grip_buttstock	= 0.3, 0.2
+
+wpn_glock_nomag_ironsight	= 0.3, 0.2
+wpn_glock	= 0.3, 0.2
+wpn_glock_mag33_ironsight	= 0.3, 0.2
+wpn_glock_nomag_prail	= 0.3, 0.2
+wpn_glock_mag19_prail	= 0.3, 0.2
+wpn_glock_mag33_prail	= 0.3, 0.2
+wpn_glock_nomag_aimpoint	= 0.3, 0.2
+wpn_glock_mag19_aimpoint	= 0.3, 0.2
+wpn_glock_mag33_aimpoint	= 0.3, 0.2
+
+wpn_masterkey	= 0.3, 0.2
+wpn_masterkey_eotech	= 0.3, 0.2
+wpn_masterkey_eotech_magnifier	= 0.3, 0.2
+wpn_masterkey_eotech_nightvision	= 0.3, 0.2
+wpn_masterkey_acog	= 0.3, 0.2
+wpn_masterkey_acog_nightvision	= 0.3, 0.2
+wpn_wincheaster1300	= 0.3, 0.2
+wpn_wincheaster1300_eotech	= 0.3, 0.2
+wpn_wincheaster1300_eotech_magnifier	= 0.3, 0.2
+wpn_wincheaster1300_eotech_nightvision	= 0.3, 0.2
+wpn_wincheaster1300_acog	= 0.3, 0.2
+wpn_wincheaster1300_acog_nightvision	= 0.3, 0.2
+
+wpn_vepr12stok_nomag_ironsight	= 0.3, 0.2
+wpn_vepr12stok_vepr4_ironsight	= 0.3, 0.2
+wpn_vepr12stok_vepr8_ironsight	= 0.3, 0.2
+wpn_vepr12custom_nomag_ironsight	= 0.3, 0.2
+wpn_vepr12custom_vepr4_ironsight	= 0.3, 0.2
+wpn_vepr12custom_vepr8_ironsight	= 0.3, 0.2
+wpn_vepr12custom_nomag_grip_ironsight	= 0.3, 0.2
+wpn_vepr12custom_vepr4_grip_ironsight	= 0.3, 0.2
+wpn_vepr12custom_vepr8_grip_ironsight	= 0.3, 0.2
+
+
+;-------- ;-------- ;-------- ;-------- ;-------- ;-------- 
 [weapons_buy_obmen]
 wpn_swd_nomag_pso1	= 0.0, 0.0
 wpn_swd_nomag_grip_pso1	= 0.0, 0.0
@@ -790,6 +1296,55 @@ wpn_ak74n_ak60_mtk83_eotech	= 0.0, 0.0
 wpn_ak74n_nomag_mtk83_acog	= 0.0, 0.0
 wpn_ak74n_nomag_mtk83_eotech	= 0.0, 0.0
 
+wpn_usp_nomag	= 0.0, 0.0
+wpn_usp	= 0.0, 0.0
+wpn_usp9	= 0.0, 0.0
+
+wpn_m712	= 0.0, 0.0
+wpn_m712_buttstock	= 0.0, 0.0
+
+wpn_apb	= 0.0, 0.0
+wpn_apb_buttstock	= 0.0, 0.0
+wpn_apb_silencer	= 0.0, 0.0
+wpn_apb_silencer_buttstock	= 0.0, 0.0
+wpn_apb_silencer_grip	= 0.0, 0.0
+wpn_apb_silencer_grip_buttstock	= 0.0, 0.0
+
+wpn_glock_nomag_ironsight	= 0.0, 0.0
+wpn_glock	= 0.0, 0.0
+wpn_glock_mag33_ironsight	= 0.0, 0.0
+wpn_glock_nomag_prail	= 0.0, 0.0
+wpn_glock_mag19_prail	= 0.0, 0.0
+wpn_glock_mag33_prail	= 0.0, 0.0
+wpn_glock_nomag_aimpoint	= 0.0, 0.0
+wpn_glock_mag19_aimpoint	= 0.0, 0.0
+wpn_glock_mag33_aimpoint	= 0.0, 0.0
+
+wpn_masterkey	= 0.0, 0.0
+wpn_masterkey_eotech	= 0.0, 0.0
+wpn_masterkey_eotech_magnifier	= 0.0, 0.0
+wpn_masterkey_eotech_nightvision	= 0.0, 0.0
+wpn_masterkey_acog	= 0.0, 0.0
+wpn_masterkey_acog_nightvision	= 0.0, 0.0
+wpn_wincheaster1300	= 0.0, 0.0
+wpn_wincheaster1300_eotech	= 0.0, 0.0
+wpn_wincheaster1300_eotech_magnifier	= 0.0, 0.0
+wpn_wincheaster1300_eotech_nightvision	= 0.0, 0.0
+wpn_wincheaster1300_acog	= 0.0, 0.0
+wpn_wincheaster1300_acog_nightvision	= 0.0, 0.0
+
+wpn_vepr12stok_nomag_ironsight	= 0.0, 0.0
+wpn_vepr12stok_vepr4_ironsight	= 0.0, 0.0
+wpn_vepr12stok_vepr8_ironsight	= 0.0, 0.0
+wpn_vepr12custom_nomag_ironsight	= 0.0, 0.0
+wpn_vepr12custom_vepr4_ironsight	= 0.0, 0.0
+wpn_vepr12custom_vepr8_ironsight	= 0.0, 0.0
+wpn_vepr12custom_nomag_grip_ironsight	= 0.0, 0.0
+wpn_vepr12custom_vepr4_grip_ironsight	= 0.0, 0.0
+wpn_vepr12custom_vepr8_grip_ironsight	= 0.0, 0.0
+
+
+;-------- ;-------- ;-------- ;-------- ;-------- ;-------- 
 [weapons_sell_obmen]
 wpn_swd_nomag_pso1	= 1, 2
 wpn_swd_nomag_grip_pso1	= 1, 2
@@ -947,3 +1502,50 @@ wpn_ak74n_ak60_mtk83_acog	= 1, 2
 wpn_ak74n_ak60_mtk83_eotech	= 1, 2
 wpn_ak74n_nomag_mtk83_acog	= 1, 2
 wpn_ak74n_nomag_mtk83_eotech	= 1, 2
+
+wpn_usp_nomag	= 1, 2
+wpn_usp	= 1, 2
+wpn_usp9	= 1, 2
+
+wpn_m712	= 1, 2
+wpn_m712_buttstock	= 1, 2
+
+wpn_apb	= 1, 2
+wpn_apb_buttstock	= 1, 2
+wpn_apb_silencer	= 1, 2
+wpn_apb_silencer_buttstock	= 1, 2
+wpn_apb_silencer_grip	= 1, 2
+wpn_apb_silencer_grip_buttstock	= 1, 2
+
+wpn_glock_nomag_ironsight	= 1, 2
+wpn_glock	= 1, 2
+wpn_glock_mag33_ironsight	= 1, 2
+wpn_glock_nomag_prail	= 1, 2
+wpn_glock_mag19_prail	= 1, 2
+wpn_glock_mag33_prail	= 1, 2
+wpn_glock_nomag_aimpoint	= 1, 2
+wpn_glock_mag19_aimpoint	= 1, 2
+wpn_glock_mag33_aimpoint	= 1, 2
+
+wpn_masterkey	= 1, 2
+wpn_masterkey_eotech	= 1, 2
+wpn_masterkey_eotech_magnifier	= 1, 2
+wpn_masterkey_eotech_nightvision	= 1, 2
+wpn_masterkey_acog	= 1, 2
+wpn_masterkey_acog_nightvision	= 1, 2
+wpn_wincheaster1300	= 1, 2
+wpn_wincheaster1300_eotech	= 1, 2
+wpn_wincheaster1300_eotech_magnifier	= 1, 2
+wpn_wincheaster1300_eotech_nightvision	= 1, 2
+wpn_wincheaster1300_acog	= 1, 2
+wpn_wincheaster1300_acog_nightvision	= 1, 2
+
+wpn_vepr12stok_nomag_ironsight	= 1, 2
+wpn_vepr12stok_vepr4_ironsight	= 1, 2
+wpn_vepr12stok_vepr8_ironsight	= 1, 2
+wpn_vepr12custom_nomag_ironsight	= 1, 2
+wpn_vepr12custom_vepr4_ironsight	= 1, 2
+wpn_vepr12custom_vepr8_ironsight	= 1, 2
+wpn_vepr12custom_nomag_grip_ironsight	= 1, 2
+wpn_vepr12custom_vepr4_grip_ironsight	= 1, 2
+wpn_vepr12custom_vepr8_grip_ironsight	= 1, 2
