--- a/gamedata/config/misc/trade_drozd.ltx
+++ b/gamedata/config/misc/trade_drozd.ltx
@@ -2,139 +2,102 @@
 #include "trade_weapons.ltx"
 
 [trader]
-buy_condition = {+digger_offence} digger_offence_buy, mil_generic_buy
-sell_condition = mil_generic_sale
-buy_supplies = mil_generic_supplies
+buy_condition = drozd_generic_buy
+sell_condition = drozd_generic_sale
+buy_supplies = {+drozd_reputation_end} drozd_generic_supplies2, drozd_generic_supplies
 
-;------------------------- ПОКУПКА ЕСЛИ МЫ ОБИДЕЛИ ДИГГЕРА -----------------------
-[digger_offence_buy]:unic_buy, weapons_buy_notrade
-;Артефакты
-af_medusa				;NO TRADE
-af_cristall_flower		;NO TRADE
-af_night_star			;NO TRADE
-af_vyvert				;NO TRADE
-af_gravi				;NO TRADE
-af_gold_fish			;NO TRADE
-af_blood				;NO TRADE
-af_mincer_meat			;NO TRADE
-af_soul				    ;NO TRADE
-af_electra_sparkler		;NO TRADE
-af_electra_flash		;NO TRADE
-af_electra_moonlight	;NO TRADE
-af_rusty_thorn			;NO TRADE
-af_rusty_kristall		;NO TRADE
-af_rusty_sea-urchin		;NO TRADE
-af_ameba_slime			;NO TRADE
-af_ameba_slug			;NO TRADE
-af_ameba_mica			;NO TRADE
-af_drops				;NO TRADE
-af_fireball				;NO TRADE
-af_cristall				;NO TRADE
-af_dummy_glassbeads		;NO TRADE
-af_dummy_pellicle		;NO TRADE
-af_dummy_battery		;NO TRADE
-af_dummy_dummy			;NO TRADE
-af_dummy_spring			;NO TRADE
-af_fuzz_kolobok			;NO TRADE
-af_zombie_hand			;NO TRADE
-af_kaktus				;NO TRADE
-af_transmut_1			;NO TRADE
-af_transmut_2			;NO TRADE
-af_transmut_3			;NO TRADE
-af_transmut_4			;NO TRADE
-af_transmut_5			;NO TRADE
-af_transmut_6			;NO TRADE
-af_transmut_7			;NO TRADE
-af_transmut_8			;NO TRADE
 
 ;------------------------- ПОКУПКА -----------------------
-[mil_generic_buy]:unic_buy, weapons_buy_notrade
+[drozd_generic_buy]:unic_buy, weapons_buy_notrade
 ;Артефакты
-af_medusa				= 0.4,	0.1
+af_medusa				= 0.5,	0.2
 af_cristall_flower		= 1.5,	1.1
 af_night_star			= 1.7,	1.3
-af_vyvert				= 0.4,	0.1
+af_vyvert				= 0.5,	0.2
 af_gravi				= 1.5,	1.1
 af_gold_fish			= 1.7,	1.3
-af_blood				= 0.4,	0.1
+af_blood				= 0.5,	0.2
 af_mincer_meat			= 1.5,	1.1
 af_soul				    = 1.7,	1.3
-af_electra_sparkler		= 0.4,	0.1
+af_electra_sparkler		= 0.5,	0.2
 af_electra_flash		= 1.5,	1.1
 af_electra_moonlight	= 1.7,	1.3
-af_rusty_thorn			= 0.4,	0.1
+af_rusty_thorn			= 0.5,	0.2
 af_rusty_kristall		= 1.5,	1.1
 af_rusty_sea-urchin		= 1.7,	1.3
-af_ameba_slime			= 0.4,	0.1
+af_ameba_slime			= 0.5,	0.2
 af_ameba_slug			= 1.5,	1.1
 af_ameba_mica			= 1.7,	1.3
-af_drops				= 0.4,	0.1
+af_drops				= 0.5,	0.2
 af_fireball				= 1.5,	1.1
 af_cristall				= 1.7,	1.3
 
-af_dummy_glassbeads		= 1.3,	1.1
-af_dummy_pellicle		= 1.3,	1.1
-af_dummy_battery		= 1.3,	1.1
-af_dummy_dummy			= 1.3,	1.1
-af_dummy_spring			= 1.3,	1.1
-af_fuzz_kolobok			= 1.3,	1.1
-af_zombie_hand			= 1.3,	1.1
-af_kaktus				= 1.3,	1.1
+af_dummy_glassbeads		= 1.4,	1.2
+af_dummy_pellicle		= 1.4,	1.2
+af_dummy_battery		= 1.4,	1.2
+af_dummy_dummy			= 1.4,	1.2
+af_dummy_spring			= 1.4,	1.2
+af_fuzz_kolobok			= 1.4,	1.2
+af_zombie_hand			= 1.4,	1.2
+af_kaktus				= 1.4,	1.2
 
-af_transmut_1			= 1.1,	1
-af_transmut_2			= 1.1,	1
-af_transmut_3			= 1.1,	1
-af_transmut_4			= 1.1,	1
-af_transmut_5			= 1.1,	1
-af_transmut_6			= 1.1,	1
-af_transmut_7			= 1.1,	1
-af_transmut_8			= 1.1,	1
+af_transmut_1			= 1.3,	1
+af_transmut_2			= 1.3,	1
+af_transmut_3			= 1.3,	1
+af_transmut_4			= 1.3,	1
+af_transmut_5			= 1.3,	1
+af_transmut_6			= 1.3,	1
+af_transmut_7			= 1.3,	1
+af_transmut_8			= 1.3,	1
 
-af_maska_1              ;NO TRADE
-af_maska_2				;NO TRADE
-af_mine                 = 0.5,	0.3
+af_maska_1              = 0.6,	0.4
+af_maska_2				= 0.6,	0.4
+af_mine                 = 0.6,	0.4
 
 ;Гранаты
-grenade_f1			= 0.4,	0.3   
-grenade_light		= 0.4,	0.3
-grenade_rgd5		= 0.4,	0.3
+grenade_f1			= 0.5,	0.4   
+grenade_light		= 0.5,	0.4
+grenade_rgd5		= 0.5,	0.4
 
 ;Оружие
 ;Автоматы и ПП
-wpn_mp40                ;NO TRADE
-wpn_mp5			        ;NO TRADE 
-wpn_mac10				;NO TRADE
-wpn_fn2000		        ;NO TRADE
-wpn_g36				    ;NO TRADE
-wpn_sig550				;NO TRADE
-wpn_m16a1_sk1			;NO TRADE
-wpn_ppsh41		    ;NO TRADE
-wpn_val				    ;NO TRADE
-wpn_groza				;NO TRADE
+wpn_mp40                = 0.7,	0.6 
+wpn_mp5			        = 0.7,	0.6 
+wpn_mac10				= 0.7,	0.6
+wpn_fn2000		        = 0.7,	0.6
+wpn_g36				    = 0.7,	0.6
+wpn_sig550				= 0.7,	0.6
+wpn_m16a1_sk1			= 0.7,	0.6
+wpn_ppsh41		    	= 0.7,	0.6
+wpn_val				    = 0.7,	0.6
+wpn_groza				= 0.7,	0.6
 
 ;Дробовики
-wpn_bm16			    ;NO TRADE
-wpn_bm16_full		    ;NO TRADE	
-wpn_toz34_short			;NO TRADE
-wpn_toz34				;NO TRADE
-wpn_wincheaster1300		;NO TRADE
-wpn_spas12				;NO TRADE
+wpn_bm16			    = 0.7,	0.6
+wpn_bm16_full		    = 0.7,	0.6	
+wpn_toz34_short			= 0.7,	0.6
+wpn_toz34				= 0.7,	0.6
+wpn_wincheaster1300		= 0.7,	0.6
+wpn_spas12				= 0.7,	0.6
+wpn_saiga12c			= 0.7,	0.6
+wpn_sayga12k_sk1		= 0.7,	0.6
 
 ;Снайперские винтовки
-wpn_sg550sr_sk1         ;NO TRADE
-wpn_svu				    ;NO TRADE
-wpn_vintorez			;NO TRADE  
-wpn_gauss			    ;NO TRADE
-wpn_awm				    ;NO TRADE
+wpn_sg550sr_sk1         = 0.7,	0.6
+wpn_svu				    = 0.7,	0.6
+wpn_vintorez			= 0.7,	0.6  
+wpn_gauss			    = 0.7,	0.6
+wpn_awm				    = 0.7,	0.6
 
 ;Пулеметы
-wpn_pkm				    ;NO TRADE
+wpn_rpk74_sk1			= 0.7,	0.6
+wpn_pkm				    = 0.7,	0.6
 
 ;Другое
-wpn_flame			    ;NO TRADE
-wpn_crossbow			;NO TRADE
-wpn_pb				    ;NO TRADE
-wpn_rpg7				;NO TRADE
+wpn_flame			    = 0.7,	0.6
+wpn_crossbow			= 0.7,	0.6
+wpn_pb				    = 0.7,	0.6
+wpn_rpg7				= 0.7,	0.6
 
 ;ADDONS
 
@@ -195,17 +158,17 @@ mutant_chimera_kogot	;NO TRADE
 mutant_izlom_hand		;NO TRADE
 
 ;Еда
-bread				= 0.3,	0.2
-kolbasa				= 0.3,	0.2
-conserva			= 0.7,	0.2
-conserva2			= 0.7,	0.2
-vodka				= 0.8,	0.2
-energy_drink		= 0.8,	0.2
-syrok 				= 0.7,	0.2
-kartoshka			= 0.3,	0.2
-kefir 				= 0.8,	0.2
-voda 				= 0.8,	0.2
-irp-b 				= 0.7,	0.2
+bread				= 0.4,	0.3
+kolbasa				= 0.4,	0.3
+conserva			= 0.4,	0.3
+conserva2			= 0.4,	0.3
+vodka				= 0.4,	0.3
+energy_drink		= 0.4,	0.3
+syrok 				= 0.4,	0.3
+kartoshka			= 0.4,	0.3
+kefir 				= 0.5,	0.3
+voda 				= 0.8,	0.4
+irp-b 				= 0.7,	0.4
 
 ;Предметы
 interactive_detector_simple		;NO TRADE
@@ -243,76 +206,127 @@ wpn_eagle_m1			= 1.1,	0.5
 wpn_colt_m1				= 1.1,	0.5
 wpn_mp5_m2				= 1.1,	0.5
 wpn_sig_m2				= 1.1,	0.5
+wpn_saiga12c_m1		    = 1.1,	0.5
 wpn_m_134				= 1.1,	0.5
+wpn_mac10_m1			= 1.1,	0.5
 wpn_vintorez_m1			= 1.1,	0.5
 
-;------------------------- АССОРТИМЕНТ -----------------------
-[mil_generic_supplies]
-soldier_outfit		= 1,	0.9
-specops_outfit		= 1,	0.5
-military_outfit		= 1,	0.2
+;------------------------- Ђссортимент (до нашей помощи) -----------------------
+[drozd_generic_supplies]
+outfit_bandit_m1		= 1,	1
+stalker_outfit		= 1,	1
 
 af_maska_2			= 1,	1
-af_mine				= 10,	0.9
+af_mine				= 1,	0.7
 
-ammo_5.45x39_fmj	= 10,	1
-ammo_5.45x39_ap		= 8,	0.9
-ammo_9x18_fmj		= 8,	1			
-ammo_9x18_pmm		= 8,	0.9
-ammo_9x39_pab9		= 8,	1	   
-ammo_9x39_ap		= 8,	0.9
-ammo_7.62x39_fmj	= 9,	0.9
-ammo_7.62x39_ap	    = 8,	0.5	   
-ammo_7.62x54_7h14	= 6,	0.8   
-ammo_7.62x54_ap		= 7,	0.8	   
-ammo_og-7b			= 5,	1
-ammo_vog-25			= 7,	0.9
-ammo_vog-25p		= 6,	0.9
+ammo_5.45x39_fmj	= 5,	1
+ammo_11.43x23_fmj	= 4,	1
+ammo_9x19_fmj		= 4,	1
+ammo_5.56x45_ss190	= 4,	1
+ammo_12x70_kart		= 7,	1
+ammo_12x76_zhekan	= 4,	1
+ammo_9x18_fmj		= 8,	1
+ammo_9x39_pab9		= 4,	1
+ammo_7.62x54_7h14	= 4,	1
+ammo_7.62x39_fmj	= 4,	1
 
-wpn_ak74n_ak74n30_ironsight			= 1,	1
-wpn_aks74ub_aks74ub30_ironsight			= 1,	0.9
-wpn_ak102_ak10230_stok_kobra           = 1,	0.5
-wpn_swd_svd10_pso1				= 1,	0.5
+wpn_addon_svd_scheek	= 1,	0.5
 
-wpn_addon_svd_scheek				= 1,	0.5
+grenade_f1			= 1,	1   
+grenade_rgd5		= 3,	1
 
-grenade_f1			= 1,	0.9   
-grenade_light		= 1,	0.9
-grenade_rgd5		= 1,	0.9
-wpn_pkm				= 1,	0.5
-wpn_rpg7			= 1,	0.1
-wpn_svu				= 1,	0.5
-wpn_val				= 1,	0.5
 wpn_pm            	= 1,	1
+wpn_vepr12stok_vepr4_ironsight            	= 1,	1
+wpn_toz34            	= 1,	1
+wpn_fort            	= 1,	1
 
-bandage				= 5,	1
-medkit_army			= 10,	1
-dix                 = 7,	1
+bandage				= 7,	1
+medkit				= 5,	1
 yod					= 4,	1
 bipsizon			= 1,	0.2
-cartridge_a		= 5, 0.6
-cartridge_h		= 10, 0.9
-cartridge_s		= 10, 0.8
-cartridge_r		= 10, 0.8
+cartridge_a		= 2, 0.6
+cartridge_h		= 3, 0.9
+cartridge_s		= 4, 0.8
+cartridge_r		= 3, 0.8
 
 matras              = 1,	1
 
 conserva			= 2,	1
 voda				= 2,	1
-irp-b 				= 5,	0.8
+bread 				= 5,	0.8
 
 hand_radio_f		= 1,	0.7
-repair_kit			= 1,	0.7
-detector_mine_finder = 1,	0.8
+repair_kit			= 1,	1
 wpn_binoc			= 1,	1
-wpn_binoc_m1			= 1,	1
-device_pnv_1	= 1,	1
-device_pnv_2	= 1,	1
 
-explosive_mobiltank	= 2, 1
+explosive_mobiltank	= 1, 1
 
-;------------------------- ПРОДАЖА -----------------------
-[mil_generic_sale]:unic_sale
+
+;------------------------- Ђссортимент 2 (после нашей помощи) -----------------------
+[drozd_generic_supplies2]
+outfit_bandit_m1		= 1,	1
+stalker_outfit		= 1,	1
+
+af_maska_2			= 1,	1
+af_mine				= 1,	0.7
+
+ammo_5.45x39_fmj	= 5,	1
+ammo_5.45x39_ap  	= 5,	1
+ammo_11.43x23_fmj	= 4,	1
+ammo_9x19_fmj		= 4,	1
+ammo_5.56x45_ss190	= 4,	1
+ammo_5.45x39_ap  	= 4,	1
+ammo_12x70_kart		= 7,	1
+ammo_12x76_zhekan	= 4,	1
+ammo_9x18_fmj		= 8,	1
+ammo_9x39_pab9		= 4,	1
+ammo_7.62x54_7h14	= 4,	1
+ammo_7.62x39_fmj	= 4,	1
+ammo_7.62x39_ap		= 4,	1
+ammo_vog-25p		= 5,	1
+ammo_arbolt			= 6,	1
+ammo_m208a			= 5,	1
+ammo_11.43x23_hydro	= 4,	1
+
+wpn_addon_svd_scheek	= 1,	0.9
+wpn_swd_svd10_pso1         = 1,	0.9
+
+grenade_f1			= 1,	1   
+grenade_rgd5		= 3,	1
+
+wpn_pm            	= 1,	1
+wpn_vepr12stok_vepr4_ironsight            	= 1,	1
+wpn_toz34            	= 1,	1
+wpn_fort            	= 1,	1
+wpn_mp5			    = 1,	0.9
+wpn_wincheaster1300	= 1,	0.9
+
+bandage				= 7,	1
+medkit				= 5,	1
+medkit_army		= 4,	1
+yod					= 4,	1
+bipsizon			= 1,	0.2
+cartridge_a		= 2, 0.6
+cartridge_h		= 3, 0.9
+cartridge_s		= 4, 0.8
+cartridge_r		= 3, 0.8
+
+matras              = 1,	1
+
+conserva			= 2,	1
+voda				= 2,	1
+bread 				= 5,	0.8
+
+hand_radio_f		= 1,	0.7
+repair_kit			= 1,	1
+wpn_binoc			= 1,	1
+
+explosive_mobiltank	= 1, 1
+treasure_item = 1,1
+
+
+;------------------------- Џродажа -----------------------
+[drozd_generic_sale]:unic_sale
 ;Броники
 novice_outfit		= 1,	3
 killer_outfit		= 1,	3
@@ -371,6 +385,7 @@ wpn_ak74n_ak74n30_ironsight				= 1,	4
 wpn_aks74ub_aks74ub30_ironsight				= 1,	4
 wpn_swd_svd10_pso1         = 1,	4
 wpn_ak102_ak10230_stok_kobra           = 1,	4
+wpn_vepr12stok_vepr4_ironsight          = 1,	4
 
 wpn_bm16				= 1,	4
 wpn_bm16_full			= 1,	4
@@ -388,6 +403,9 @@ wpn_pb				    = 1,	4
 wpn_pkm				    = 1,	3
 wpn_ppsh41			= 1,	4
 wpn_rpg7				= 1,	3
+wpn_rpk74_sk1			= 1,	4
+wpn_saiga12c			= 1,	4
+wpn_sayga12k_sk1	= 1,	4
 wpn_sig550				= 1,	4
 wpn_spas12				= 1,	4
 wpn_svu				    = 1,	4
