--- a/gamedata/config/misc/treasure_manager.ltx
+++ b/gamedata/config/misc/treasure_manager.ltx
@@ -235,7 +235,7 @@ ros_secret_0025
 target = 5000
 name = esc_secret_0000_name
 description = esc_secret_0000_descr
-items = ammo_12x76_zhekan,30,wpn_wincheaster1300
+items = ammo_12x76_zhekan,30,wpn_masterkey
 condlist = {=npc_rank(experienced) =actor_on_level(l01_escape)} 10
 community = military
 
@@ -259,7 +259,7 @@ community = stalker
 target = 5003
 name = esc_secret_0003_name
 description = esc_secret_0003_descr
-items = wpn_mp40,wpn_zf4,wpn_9mm_nato_silencer,dix,3,ammo_9x19_pbp,60
+items = dix,3
 condlist = 5
 community = military
 
@@ -275,7 +275,7 @@ community = bandit
 target = 5005
 name = esc_secret_0005_name
 description = esc_secret_0005_descr
-items = ammo_7.62x39_ap,60,wpn_akm_akm30_ironsight,wpn_addon_mag_rpk40
+items = wpn_aks74ub_aks74ub30_ironsight,ammo_5.45x39_fmj,60,wpn_addon_mag_rpk7445
 condlist = {=npc_rank(experienced)} 5
 community = stalker
 
@@ -315,7 +315,7 @@ community = bandit
 target = 5010
 name = esc_secret_0010_name
 description = esc_secret_0010_descr
-items = wpn_hpsa,wpn_9mm_nato_silencer,ammo_9x19_pbp,100
+items = wpn_usp_nomag,wpn_addon_mag_usp8,wpn_addon_mag_usp15
 condlist = {=actor_on_level(l06_rostok) =npc_rank(master)} 5
 community = killer
 
@@ -347,7 +347,7 @@ community = military
 target = 5014
 name = esc_secret_0014_name
 description = esc_secret_0014_descr
-items = wpn_ak74n_ak74n30_side_rail_kobra,wpn_addon_mag_rpk7445,ammo_5.45x39_ap,30
+items = wpn_fort,ammo_9x19_fmj,20
 condlist = {=actor_on_level(l01_escape) =npc_rank(veteran)} 5
 community = military
 
@@ -363,7 +363,7 @@ community = military
 target = 5016
 name = esc_secret_0016_name
 description = esc_secret_0016_descr
-items = wpn_mp5_m2
+items = wpn_aks74ub_ak60_side_rail_1p29
 condlist = {=actor_on_level(l01_escape) =npc_rank(experienced)} 3
 community = stalker
 
@@ -371,7 +371,7 @@ community = stalker
 target = 5017
 name = esc_secret_0017_name
 description = esc_secret_0017_descr
-items = outfit_novice_m1,wpn_addon_mag_rpk40,ammo_7.62x39_ap,60
+items = outfit_novice_m1
 condlist = {=actor_on_level(l01_escape)} 3
 community = military
 
@@ -387,7 +387,7 @@ community = military
 target = 5019
 name = esc_secret_0019_name
 description = esc_secret_0019_descr
-items = ammo_9x19_pbp,90,ammo_12x76_zhekan,24,ammo_9x18_pmm,40,wpn_addon_silencer
+items = ammo_9x19_pbp,90,ammo_12x76_zhekan,24,ammo_9x18_pmm,40
 condlist = {=npc_rank(novice)} 3, {=npc_rank(experienced)} 5
 community = stalker
 
@@ -414,7 +414,7 @@ community = bandit
 target = 5032
 name = gar_secret_0002_name
 description = gar_secret_0002_descr
-items = wpn_aks74ub_aks74ub30_ironsight,wpn_addon_sil_545_pbs4,ammo_5.45x39_fmj,60
+items = wpn_m712,wpn_addon_mauser_buttstock,ammo_7.62x25_ps,60
 condlist = 5
 community = killer
 
@@ -446,7 +446,7 @@ community = stalker
 target = 5036
 name = gar_secret_0006_name
 description = gar_secret_0006_descr
-items = ammo_9x18_pmm,30,wpn_pm
+items = dolg_outfit
 condlist = {=actor_on_level(l02_garbage) =npc_rank(experienced)} 3, {=actor_on_level(l03_agroprom) =npc_rank(experienced)} 3
 community = stalker
 
@@ -454,7 +454,7 @@ community = stalker
 target = 5037
 name = gar_secret_0007_name
 description = gar_secret_0007_descr
-items = bandit_plash_m1,wpn_mp5,wpn_addon_acog
+items = bandit_plash_m1
 condlist = {=actor_on_level(l02_garbage) =npc_rank(novice)} 3
 community = stalker, bandit
 
@@ -470,7 +470,7 @@ community = bandit
 target = 5039
 name = gar_secret_0009_name
 description = gar_secret_0009_descr
-items = ammo_7.62x39_ap,60,wpn_addon_sil_762_pbs1
+items = wpn_mp40
 condlist = {=actor_on_level(l02_garbage) =npc_rank(experienced)} 3, {=actor_on_level(l03_agroprom) =npc_rank(experienced)} 3
 community = stalker
 
@@ -600,7 +600,7 @@ community = stalker
 target = 5065
 name = agr_secret_0000_name
 description = agr_secret_0000_descr
-items = wpn_mp5,ammo_9x19_pbp,100
+items = wpn_mp5,ammo_9x19_pbp,60
 condlist = {=actor_on_level(l03_agroprom) =npc_rank(experienced)} 3
 community = stalker
 
@@ -608,7 +608,7 @@ community = stalker
 target = 5066
 name = agr_secret_0001_name
 description = agr_secret_0001_descr
-items = ammo_5.45x39_ap,60,interactive_detector_simple
+items = interactive_detector_simple
 condlist = {=npc_rank(experienced)} 3
 community = dolg
 
@@ -648,7 +648,7 @@ community = stalker
 target = 5071
 name = agr_secret_0006_name
 description = agr_secret_0006_descr
-items = specops_outfit,wpn_akm_rpk75_side_rail_kobra
+items = specops_outfit
 condlist = {=actor_on_level(l03_agroprom) =npc_rank(novice)} 5
 community = stalker, bandit
 
@@ -656,7 +656,7 @@ community = stalker, bandit
 target = 5072
 name = agr_secret_0007_name
 description = agr_secret_0007_descr
-items = ammo_vog-25,5,wpn_addon_grenade_launcher,ammo_7.62x54_7h1,30
+items = wpn_addon_grenade_launcher,ammo_vog-25,6
 condlist = {=actor_on_level(l03u_agr_underground) =npc_rank(experienced)} 3, {=actor_on_level(l03_agroprom) =npc_rank(experienced)} 5
 community = bandit
 
@@ -680,7 +680,7 @@ community = stalker
 target = 5075
 name = agr_secret_0010_name
 description = agr_secret_0010_descr
-items = wpn_mp5_m1,ammo_9x18_pmm,60,ammo_11.43x23_hydro,60
+items = wpn_mp5_m1
 condlist = {=actor_on_level(l02_garbage) =npc_rank(experienced)} 3, {=actor_on_level(l03_agroprom) =npc_rank(experienced)} 5
 community = dolg, stalker
 
@@ -688,7 +688,7 @@ community = dolg, stalker
 target = 5076
 name = agr_secret_0011_name
 description = agr_secret_0011_descr
-items = ammo_11.43x23_hydro,30,killer_outfit
+items = killer_outfit
 condlist = {=npc_rank(experienced)} 5
 community = killer
 
@@ -704,7 +704,7 @@ community = bandit
 target = 5078
 name = agr_secret_0013_name
 description = agr_secret_0013_descr
-items = wpn_addon_grenade_launcher,wpn_addon_mag_svd20,wpn_addon_scope_1p59,ammo_7.62x54_7h1,30
+items = ammo_7.62x54_7h1,30
 condlist = {=actor_on_level(l02_garbage) =npc_rank(experienced)} 3, {=actor_on_level(l04_darkvalley) =npc_rank(experienced)} 3
 community = bandit
 
@@ -712,7 +712,7 @@ community = bandit
 target = 5079
 name = agr_secret_0014_name
 description = agr_secret_0014_descr
-items = vodka,10,mutant_boar_leg,3,salo,2,interactive_detector_simple,
+items = vodka,10,mutant_boar_leg,3,salo,2
 condlist = {=actor_on_level(l03_agroprom) =npc_rank(experienced)} 3
 community = stalker
 
@@ -720,7 +720,7 @@ community = stalker
 target = 5080
 name = agr_secret_0015_name
 description = agr_secret_0015_descr
-items = wpn_mac10_m1,wpn_addon_sil_1143_p,ammo_11.43x23_hydro,60
+items = wpn_knife_m9
 condlist = {=actor_on_level(l03u_agr_underground) =npc_rank(experienced)} 3, {=actor_on_level(l03_agroprom) =npc_rank(experienced)} 5
 community = stalker
 
@@ -728,7 +728,7 @@ community = stalker
 target = 5081
 name = agr_secret_0016_name
 description = agr_secret_0016_descr
-items = wpn_addon_scope_susat,wpn_addon_grenade_launcher
+items = wpn_addon_scope_susat,wpn_addon_sil_556_ar
 condlist = {=actor_on_level(l03_agroprom)} 5
 community = bandit
 
@@ -736,7 +736,7 @@ community = bandit
 target = 5082
 name = agr_secret_0017_name
 description = agr_secret_0017_descr
-items = ammo_12x70_kart,30,wpn_toz34
+items = ammo_12x70_kart,30,wpn_spas12_m1
 condlist = {=actor_on_level(l03_agroprom)} 3
 community = military
 
@@ -768,7 +768,7 @@ community = stalker
 target = 5086
 name = agr_secret_0021_name
 description = agr_secret_0021_descr
-items = wpn_wincheaster1300,ammo_12x76_zhekan,40,ammo_12x70_kart,40
+items = wpn_spas12_m1,ammo_12x76_zhekan,40,ammo_12x70_kart,40
 condlist = {=actor_on_level(l02_garbage) =npc_rank(novice)} 3, {=actor_on_level(l03_agroprom) =npc_rank(novice)} 5
 community = stalker, bandit
 
@@ -776,7 +776,7 @@ community = stalker, bandit
 target = 5087
 name = agr_secret_0022_name
 description = agr_secret_0022_descr
-items = ammo_5.45x39_fmj,90,ammo_9x18_pmm,120
+items = ammo_5.45x39_ap,90,ammo_9x18_pmm,120
 condlist = {=actor_on_level(l03_agroprom) =npc_rank(experienced)} 3
 community = stalker
 
@@ -784,7 +784,7 @@ community = stalker
 target = 5088
 name = agr_secret_0023_name
 description = agr_secret_0023_descr
-items = wpn_ak102_ak10230_custom_grip_kobra, wpn_addon_mag_cmag100, wpn_addon_sil_545_atg, ammo_5.56x45_ss190,60
+items = wpn_oz33
 condlist = {=actor_on_level(l02_garbage) =npc_rank(experienced)} 3, {=actor_on_level(l03_agroprom) =npc_rank(experienced)} 3
 community = stalker
 
@@ -808,7 +808,7 @@ community = stalker
 target = 5091
 name = agr_secret_0026_name
 description = agr_secret_0026_descr
-items = ammo_5.45x39_ap,120,ammo_vog-25,5,ammo_og-7b,af_mine,3
+items = af_mine,3
 condlist = {=actor_on_level(l03u_agr_underground) =npc_rank(experienced)} 3, {=actor_on_level(l03_agroprom) =npc_rank(experienced)} 5
 community = stalker, bandit
 
@@ -816,7 +816,7 @@ community = stalker, bandit
 target = 5092
 name = agr_secret_0027_name
 description = agr_secret_0027_descr
-items = wpn_rpg7,ammo_og-7b,3,af_mine,5
+items = wpn_rpg7,ammo_og-7b,3
 condlist = {=actor_on_level(l03u_agr_underground) =npc_rank(experienced)} 3, {=actor_on_level(l03_agroprom) =npc_rank(experienced)} 5
 community = stalker, bandit
 
@@ -826,7 +826,7 @@ community = stalker, bandit
 target = 5100
 name = agr_u_secret_0000_name
 description = agr_u_secret_0000_descr
-items = wpn_aks74ub_aks74ub30_ironsight,wpn_addon_sil_545_pbs4,ammo_5.45x39_ap,60,medkit_army,5,antirad,3
+items = medkit_army,5,antirad,3
 condlist = {=actor_on_level(l03_agroprom) =npc_rank(experienced)} 10
 community = stalker
 
@@ -834,7 +834,7 @@ community = stalker
 target = 5101
 name = agr_u_secret_0001_name
 description = agr_u_secret_0001_descr
-items = ammo_7.62x54_ap,50,af_rusty_kristall,ammo_7.62x39_ap,90
+items = af_rusty_kristall
 condlist = {=actor_on_level(l03u_agr_underground) =npc_rank(experienced)} 10
 community = bandit
 
@@ -850,7 +850,7 @@ community = stalker
 target = 5103
 name = agr_u_secret_0003_name
 description = agr_u_secret_0003_descr
-items = ammo_5.56x45_ap,60,ammo_12x76_zhekan,40
+items = wpn_luger
 condlist = {=actor_on_level(l03u_agr_underground) =npc_rank(experienced)} 10
 community = bandit
 
@@ -858,7 +858,7 @@ community = bandit
 target = 5104
 name = agr_u_secret_0004_name
 description = agr_u_secret_0004_descr
-items = wpn_groza_m1, ammo_5.45x39_ap,60, wpn_addon_sil_545_tgp-a
+items = wpn_mosin_sni
 condlist = {=actor_on_level(l03u_agr_underground) =npc_rank(experienced)} 10
 community = stalker, bandit, military
 
@@ -908,7 +908,7 @@ community = stalker, bandit
 target = 5405
 name = val_secret_0005_name
 description = val_secret_0005_description
-items = medkit_army,5,antirad,5
+items = medkit,3
 condlist = {=npc_rank(experienced)} 3
 community = stalker
 
@@ -916,7 +916,7 @@ community = stalker
 target = 5406
 name = val_secret_0006_name
 description = val_secret_0006_description
-items = dolg_outfit,ammo_9x18_pmm,120
+items = ammo_9x18_pmm,120
 condlist = {=npc_rank(experienced)} 3
 community = stalker, bandit
 
@@ -924,7 +924,7 @@ community = stalker, bandit
 target = 5407
 name = val_secret_0007_name
 description = val_secret_0007_description
-items = ammo_7.62x54_7h14,20,ammo_5.45x39_ap,60
+items = medkit_army,3,antirad,2
 condlist = {=npc_rank(experienced)} 3
 community = stalker, bandit
 
@@ -1004,7 +1004,7 @@ community = bandit
 target = 5417
 name = val_secret_0017_name
 description = val_secret_0017_description
-items = mutant_flesh_eye,mutant_psevdodog_tail,mutant_krovosos_jaw,mutant_snork_leg
+items = wpn_knife_m1,mutant_flesh_eye,mutant_psevdodog_tail,mutant_krovosos_jaw,mutant_snork_leg
 condlist = {=npc_rank(veteran)} 5
 community = stalker
 
@@ -1036,7 +1036,7 @@ community = bandit
 target = 5421
 name = val_secret_0021_name
 description = val_secret_0021_description
-items = wpn_addon_grenade_launcher,wpn_addon_scope_1p29
+items = wpn_addon_scope_1p29
 condlist = {=npc_rank(veteran)} 5
 community = stalker
 
@@ -1060,7 +1060,7 @@ community = stalker
 target = 5424
 name = val_secret_0024_name
 description = val_secret_0024_description
-items = guitar_f,ammo_og-7b,2,ammo_5.56x45_ap,60
+items = guitar_f,wpn_mac10,ammo_11.43x23_hydro,3
 condlist = {=npc_rank(veteran)} 5
 community = stalker
 
@@ -1176,7 +1176,7 @@ community = stalker, dolg
 target = 5438
 name = bar_secret_0003_name
 description = bar_secret_0003_description
-items = wpn_addon_sil_545_tgp-a,ammo_5.45x39_ap,90,vodka,5
+items = wpn_addon_sil_545_tgp-a
 condlist = {=npc_rank(experienced)} 3
 community = stalker
 
@@ -1192,7 +1192,7 @@ community = stalker
 target = 5440
 name = bar_secret_0005_name
 description = bar_secret_0005_description
-items = ammo_vog-25,5,ammo_og-7b,5,ammo_vog-25p,5
+items = wpn_addon_mag_rpk40,wpn_addon_scope_kobra
 condlist = {=npc_rank(experienced)} 5
 community = stalker
 
@@ -1200,7 +1200,7 @@ community = stalker
 target = 5441
 name = bar_secret_0006_name
 description = bar_secret_0006_description
-items = wpn_addon_mag_rpk40,wpn_addon_scope_kobra,ammo_7.62x39_ap,90
+items = wpn_aks74ub_rpk45_side_rail_1p29
 condlist = {=npc_rank(veteran)} 3
 community = stalker
 
@@ -1208,7 +1208,7 @@ community = stalker
 target = 5442
 name = bar_secret_0007_name
 description = bar_secret_0007_description
-items = wpn_addon_scope_susat,wpn_addon_grenade_launcher_m203,wpn_addon_mtk83
+items = wpn_addon_mtk83
 condlist = {=npc_rank(veteran)} 3
 community = stalker
 
@@ -1224,7 +1224,7 @@ community = stalker
 target = 5444
 name = bar_secret_0009_name
 description = bar_secret_0009_description
-items = ammo_7.62x54_7h14,20,grenade_f1,3,ammo_9x18_pmm,60
+items = ammo_7.62x54_7h14,20,grenade_f1,3,wpn_addon_scope
 condlist = {=npc_rank(veteran)} 5
 community = stalker
 
@@ -1280,7 +1280,7 @@ community = stalker, bandit, killer
 target = 5451
 name = bar_secret_0016_name
 description = bar_secret_0016_description
-items = ecolog_outfit,medkit_scientic,5,antirad,3
+items = ecolog_outfit
 condlist = {=npc_rank(veteran)} 5
 community = stalker, ecolog, dolg
 
@@ -1377,7 +1377,7 @@ community = stalker, zombied
 target = 5463
 name = ros_secret_0008_name
 description = ros_secret_0008_description
-items = ammo_12x70_kart,50,wpn_winchester_m1
+items = ammo_12x70_kart,50,wpn_spas12_m1
 condlist = {=npc_rank(veteran)} 10
 community = stalker, killer, zombied
 
@@ -1770,7 +1770,7 @@ community = stalker, bandit, dolg, freedom, zombied
 target = 5231
 name = yan_secret_0002_name
 description = yan_secret_0002_description
-items = af_soul,af_rusty_sea-urchin
+items = wpn_luger,wpn_addon_sil_m1895,ammo_9x19_pbp,100
 condlist = {=npc_rank(veteran) +yan_kill_brain_done} 5, {=npc_rank(master) +yan_kill_brain_done} 10
 community = stalker, bandit, dolg, freedom
 
@@ -1818,7 +1818,7 @@ community = stalker, bandit, dolg, freedom, zombied
 target = 5237
 name = yan_secret_0008_name
 description = yan_secret_0008_description
-items = wpn_spas12_m1,ammo_12x70_kart,30
+items = wpn_vepr12stok_vepr8_ironsight,ammo_12x70_kart,30
 condlist = {=npc_rank(veteran)} 5, {=npc_rank(master)} 5
 community = stalker, bandit, dolg, freedom, zombied
 
